@@ -30,6 +30,7 @@
 "DISPLAY_JEWISH_GERESHAYIM";"Toon Hebreeuws Gershayim"
 "DISPLAY_JEWISH_THOUSANDS";"Geef Hebreeuwse duizendtallen weer"
 "DISPLAY_PINYIN";"PinYin vertaling toevoegen aan Chinese namen en locaties"
+"DISPLAY_TRANSLITERATE";"Translitereer Cyrillische namen/locaties naar Romaanse karakters"
 "EDIT_AUTOCLOSE";"Wijzig-venster automatisch sluiten"
 "EDIT_GEDCOM_RECORD";"STa gebruikers toe om GEDCOM-gegevens direct te wijzigen"
 "ENABLE_CLIPPINGS_CART";"Knipselbak aanzetten"
@@ -509,7 +510,7 @@
 "click_here_to_go_to_pedigree_tree";"Klik hier om naar de kwartierstaat te gaan."
 "click_mm_links";"Klik voor multimediakoppelingen"
 "click_to_add_media";"Klik hier om de bovenstaande media-items toe te voegen aan het GEDCOM-bestand #GEDCOM#"
-"clicking_ok";"Als u op OK klikt, wordt een venster geopend om contact op te nemen met"
+"clicking_ok";"Als u op OK klikt, wordt een venster geopend om contact op te nemen met #user[fullname]#"
 "clip_cart";"Knipselbak"
 "clip_explaination";"De Stamboom knipselbak geeft u de mogelijkheid om "knipsels" van deze stamboom te nemen en deze samen te bundelen in één GEDCOM-bestand om te kunnen downloaden.<br /><br />"
 "clippings_cart";"Knipsels"
@@ -1335,7 +1336,7 @@
 "message_empty_warning";"WAARSCHUWING! De tekst van deze boodschap ontbreekt in [#LANGUAGE_FILE#]"
 "message_from";"E-mail adres:"
 "message_from_name";"Uw naam:"
-"message_instructions";"<b>Let op:</b>Vertrouwelijke informatie over levende personen wordt alleen verstrekt aan verwanten en andere geautoriseerde personen. Voordat u vertrouwelijke informatie ontvangt, wordt eerst uw relatie met de desbetreffende persoon geverifieerd.<br />Soms is informatie over reeds overleden personen ook vertrouwelijk. Dit kan voorkomen, als er niet voldoende informatie voorhanden is, om vast te stellen of de persoon daadwerkelijk is overleden. Waarschijnlijk is ook niet meer informatie voorhanden over deze persoon.<br /><br />Controleer, voordat u een vraag stelt, aan de hand van data, plaatsen en familieleden, dat het de juiste persoon betreft. Als u genealogische informatie versterkt, vermeldt dan de bronnen waar de informatie vandaan komt."
+"message_instructions";"<b>Let op:</b> Vertrouwelijke informatie over levende personen wordt alleen verstrekt aan verwanten en andere geautoriseerde personen. Voordat u vertrouwelijke informatie ontvangt, wordt eerst uw relatie met de desbetreffende persoon geverifieerd.<br />Soms is informatie over reeds overleden personen ook vertrouwelijk. Dit kan voorkomen, als er niet voldoende informatie voorhanden is, om vast te stellen of de persoon daadwerkelijk is overleden. Waarschijnlijk is ook niet meer informatie voorhanden over deze persoon.<br /><br />Controleer, voordat u een vraag stelt, aan de hand van data, plaatsen en familieleden, dat het de juiste persoon betreft. Als u genealogische informatie versterkt, vermeldt dan de bronnen waar de informatie vandaan komt."
 "message_sent";"Bericht verzonden"
 "message_subject";"Onderwerp:"
 "message_to";"Bericht aan:"
@@ -1360,6 +1361,7 @@
 "month_before_day";"Maand voor dag (MM DD YYYY)"
 "monthly";"Maandelijks"
 "months";"maanden"
+"more_config_help";"<br /><b>Meer helpinformatie</b><br />Meer helpinformatie is beschikbaar door op het <b>?</b> te klikken naast de items op de pagina.<br />"
 "more_events_privacy";"Andere gebeurtenissen voor de komende #gm_lang[global_num4]# dagen zijn vanwege privacybeperkingen verborgen."
 "more_events_privacy1";"Andere gebeurtenissen voor morgen zijn vanwege privacybeperkingen verborgen."
 "more_information";"Neem voor meer informatie contact op met "
@@ -1530,7 +1532,6 @@
 "passwordlength";"Het wachtwoord moet uit minimaal 6 karakters bestaan."
 "paste_id_into_field";"Plak dit bron-ID in de invoervelden voor verwijzing naar deze bron "
 "paste_mm_id_into_field";"Plak het volgende multimedia-ID in het formulier om dit multimedia object te koppelen"
-"0";"0"
 "paste_noteid_into_field";"Plak het volgende ID van de gedeelde notitie in het formulier om deze gedeelde notitie te koppelen"
 "paste_person";"Persoon plakken"
 "paste_rid_into_field";"Plak het ID van de bewaarplaats in uw invoerpagina om de verwijzing naar de bewaarplaats over te nemen "
@@ -2412,6 +2413,7 @@
 "user_created";"Gebruiker gemaakt."
 "user_default_tab";"Standaard tabblad voor persoonspagina"
 "user_favorites_block";"Favorieten gebruiker"
+"0";"0"
 "user_favorites_descr";"Het vak "Favorieten gebruiker" toont de gebruiker een lijst van zijn of haar favoriete personen in de genealogie. Op die wijze kan de gebruiker snel de gegevens van deze personen inzien."
 "user_info";"Mijn gebruikersinformatie"
 "user_manual";"Genmod gebruikershandboek"
