@@ -20,6 +20,7 @@ Disallow: /relationship.php
 Disallow: /repo.php
 Disallow: /repolist.php
 Disallow: /reportengine.php
+Disallow: /rss.php
 Disallow: /search.php
 Disallow: /source.php
 Disallow: /sourcelist.php
