@@ -13,7 +13,7 @@ if (!isset($without_close)) print "</div> <!-- closing div id=\"content\" -->\n"
 			GM_LANG_accept_changes."</a>\n";
 		}
 	}
-	print "<br />Running <a href=\"http://www.sourceforge.net/projects/genmod\" target=\"_blank\">Genmod";
+	print "<br />Running <a href=\"https://www.sourceforge.net/projects/genmod\" target=\"_blank\">Genmod";
 	if (count($CONFIG_PARMS) >1) print " Enterprise";
 	print MediaFS::GetStorageType();
 	print "</a>  - Version ".GM_VERSION." ".GM_VERSION_RELEASE;
